[gd_scene load_steps=3 format=3 uid="uid://db8t712dnux7c"]

[ext_resource type="Script" path="res://scripts/ball.gd" id="1_pmtyk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nsp27"]
size = Vector2(16, 16)

[node name="Ball" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_pmtyk")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nsp27")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2.38419e-07, 2.38419e-07)
scale = Vector2(0.8, 0.8)

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
